# git-sherpa

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: check.rs  cli.rs  config.rs  fix.rs  git.rs  hooks.rs  main.rs  sensitive.rs
