[package]
name = "git-sherpa"
version = "0.1.0"
edition = "2021"
description = "A CLI to standardize Git hygiene across GitHub and GitLab repositories"
license = "MIT"
repository = "https://github.com/chkoutam/git-sherpa"
homepage = "https://github.com/chkoutam/git-sherpa"
readme = "README.md"
keywords = ["git", "cli", "linter", "conventional-commits", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
strip = true
